# dejavu

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/dejavu/: __init__.py  cli.py  config.py  db.py  discovery.py  embedder.py  extractor.py  indexer.py  search.py  server.py
tests/: test_config.py  test_db.py  test_discovery.py  test_extractor.py  test_search.py
